# JNP1_7_Project

./: CMakeLists.txt  bmp.cpp  functional.h  images.cpp  images.h  main.cpp  test.cpp  test.h
